# Autogen_Core1

./: README.md  main.py  pyproject.toml
PizzaShop_Project/: main.py  pyproject.toml
PizzaShop_Project/agents/: __init__.py  creative_namer.py  customer_service.py  pizza_chef.py
PizzaShop_Project/config/: llm_config.py
PizzaShop_Project/messages/: pizza_messages.py
PizzaShop_Project/utils/: runtime_helpers.py
autogenCore_practise/: llm_config.py  run_player1.py  run_player2.py  run_rps.py  start_host.py
autogenCore_practise/agents/: RockPaperScissorsAgent.py  dataclass.py  player1Agent.py  player2Agent.py
autogenCore_practise/notepadpractises/: multiTreadAgent.ipynb  practise1(single).ipynb  singleTreaded.ipynb
