[project]
name = "pizzashop-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "autogen-agentchat>=0.7.1",
    "autogen-core>=0.7.1",
    "autogen-ext>=0.7.1",
    "openai>=1.97.1",
    "playwright>=1.54.0",
    "python-dotenv>=1.1.1",
    "tiktoken>=0.9.0",
]
